# TLog

./: README.md
decode/: CMakeLists.txt  decode.cc  decode_formatter.cc  decode_formatter.h
logger/: defer.h  internal_log.h  log_common.h  log_factory.cc  log_factory.h  log_handle.cc  log_handle.h  log_msg.cc  log_msg.h  log_variadic_handle.h  logger.h  space.h
logger/compress/: compress.h  zlib_compress.cc  zlib_compress.h  zstd_compress.cc  zstd_compress.h
logger/context/: context.cc  context.h  executor.cc  executor.h  thread_pool.cc  thread_pool.h
logger/crypt/: aes_crypt.h  crypt.cc  crypt.h
logger/example/: CMakeLists.txt  example.txt  main.cc  test.cc  test_compress.cc  test_con.cc  test_crypt.cc  test_handle.cc  test_log_macro.cc  test_msg.cc  test_protobuf.cc  test_sink.cc  test_tp.cc
logger/formatter/: default_formatter.cc  default_formatter.h  effective_formatter.cc  effective_formatter.h  formatter.h
logger/mmap/: mmap_aux.cc  mmap_aux.h  mmap_linux.cc  mmap_win.cc
logger/sinks/: console_sink.cc  console_sink.h  effective_sink.cc  effective_sink.h  sink.h
logger/utils/: CMakeLists.txt  file_util.cc  file_util.h  sys_util.h  sys_util_linux.cc  sys_util_win.cc  test.cc  timer_counter.h
